--- a/styles.css
+++ b/styles.css
@@ -122,7 +122,7 @@ body{
   
   #output {
     background: #1f1f1f;
-    height: 300px;
+    min-height: 300px;
     width: 80%;
     max-width: 300px;
     margin-top: 20px;
